feat(event): create page and eventservice

--- a/src/app/component/event/event.component.html
+++ b/src/app/component/event/event.component.html
@@ -6,5 +6,5 @@
     <input type=" text " name="event.geoPoint.coordinates " id="type " required [(ngModel)]="event.geoPoint.coordinates
     " autocomplete="off ">
   </div>
-  <button type="submit " [disabled]="!eventForm.form.valid ">Submit</button>
+  <button type="submit">Submit</button>
 </form>
