--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul (swipeleft)="swipe(idx, $event.type)" (swiperight)="swipe(idx, $event.type)">
   <li>
     <a routerLink="map">View Map</a>
   </li>
