--- a/src/app/component/map/map.component.html
+++ b/src/app/component/map/map.component.html
@@ -1,3 +1,3 @@
-<agm-map *ngIf="lat" [latitude]="lat" [longitude]="lng" [zoom]="zoom" (click)="clickOnTheMap($event)">
+<agm-map *ngIf="lat" [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 </agm-map>
