--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,11 +1,23 @@
-<ul (swipeleft)="swipe(idx, $event.type)" (swiperight)="swipe(idx, $event.type)">
-  <li>
-    <a routerLink="map">View Map</a>
-  </li>
-  <li>
-    <a routerLink="event">Create event</a>
-  </li>
-  <li>
-    <a routerLink="picture">Create picture</a>
-  </li>
-</ul>
+<div class="home">
+  <div class="logo">
+    <h1 class="titleLogo">Water Watch</h1>
+  </div>
+
+  <div class="nav">
+    <div class="bttopaz">
+      <a routerLink="map">
+        <p>
+          <em>Log Catch</em>
+        </p>
+      </a>
+    </div>
+
+    <div class="homeBtn btblue">
+      <a routerLink="event">
+        <p>
+          <em>Report Incident</em>
+        </p>
+      </a>
+    </div>
+  </div>
+</div>
