--- a/src/app/component/picture/picture.component.html
+++ b/src/app/component/picture/picture.component.html
@@ -1,2 +1,3 @@
-<input type="file" #fileInput placeholder="Upload file..." />
+<input type="file"  accept="image/*;capture=camera"  #fileInput placeholder="Upload file..." />
+
 <button type="button" (click)="upload()">Upload</button>
