--- a/src/app/component/picture/picture.component.html
+++ b/src/app/component/picture/picture.component.html
@@ -1,3 +1,8 @@
-<input type="file"  accept="image/*;capture=camera"  #fileInput placeholder="Upload file..." />
+<div class="divPicture">
+    <img class="picture" [src]="imageData" *ngIf="imageData" />
+</div>
 
-<button type="button" (click)="upload()">Upload</button>
+<footer>
+    <img  class="button-picture" (click)="imgFileInput.click()" src="/assets/photo-camera.png"/>
+    <input hidden type="file" accept="image/*;capture=camera" #imgFileInput (change)="readUrl($event)" />
+</footer>
