feat(events): Home Page

--- a/src/app/component/progressbar/progressbar.component.html
+++ b/src/app/component/progressbar/progressbar.component.html
@@ -1,5 +1,5 @@
 <div class="progress">
-  <p>{{steps[idx].name}}</p>
+  <p>{{steps[idx]}}</p>
   <div class="background">
     <div class="progressBar" [ngStyle]="{'width':getSize()}"></div>
   </div>
