--- a/src/app/component/map/map.component.html
+++ b/src/app/component/map/map.component.html
@@ -1,7 +1,13 @@
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false">
+  <agm-marker [latitude]="lat" [longitude]="lng" [iconUrl]="'/assets/me.png'"></agm-marker>
   <agm-marker *ngFor="let event of events; let i = index" [latitude]="event.location.coordinates[0]" [longitude]="event.location.coordinates[1]"
-    [label]="event.type">
+  [iconUrl]="getIcon(event)">
+
+    <agm-info-window *ngIf="event.type=='catch'">
+      <div >
+        <img class="eventPicture" src="/{{event.details.image}}" />
+      </div>
+    </agm-info-window>
   </agm-marker>
 </agm-map>
 <footer class="footer" (swipeleft)="swipe(idx, $event.type)">
