fix(map):: Home Page

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -5,7 +5,7 @@
 
   <div class="nav">
     <div class="bttopaz">
-      <a routerLink="logcatch">
+      <a routerLink="catch">
         <p>
           <em>Log Catch</em>
         </p>
@@ -13,7 +13,7 @@
     </div>
 
     <div class="homeBtn btblue">
-      <a routerLink="event">
+      <a routerLink="incident">
         <p>
           <em>Report Incident</em>
         </p>
