fix(map):: Home Page

--- a/src/app/component/map/map.component.html
+++ b/src/app/component/map/map.component.html
@@ -10,6 +10,6 @@
     </agm-info-window>
   </agm-marker>
 </agm-map>
-<footer class="footer" (swipeleft)="swipe(idx, $event.type)">
+<footer class="footer" (swipeleft)="swipe($event.type)">
   <img class="logo" src="/assets/logo.svg" />
 </footer>
