--- a/src/app/component/log-catch/log-catch.component.css
+++ b/src/app/component/log-catch/log-catch.component.css
@@ -24,9 +24,8 @@ footer{
     margin: 0 auto;
 }
 .picture{
-    display: block;
-    width: 100vw;
-    height: 66vh;
+    display: block;  
+    max-height: 66vh;
     margin-left: -4vh;
     object-fit: cover;
 }
