fix(map):: Home Page

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home" (swiperight)="swipe('map')">
   <div class="logo">
-    <h1 class="titleLogo">Water Watch</h1>
+    <h1 class="titleLogo">WATER WATCH</h1>
   </div>
 
   <div class="nav">
